\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 1.6.0++}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Implement zero-one-inflated beta models
      via family \code{zero_one_inflated_beta}.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Ensure full compatibility with 
      \pkg{bayesplot} version 1.2.0.
      \item Deprecate addition argument \code{disp}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems when setting priors
      on coefficients of auxiliary parameters 
      when also setting priors on the corresponding
      coefficients of the mean parameter.
      Thanks to Matti Vuorre for reporting this bug.
      \item Allow ordered factors to be used
      as grouping variables thanks to the GitHub
      user itissid.
    }
  }
}

\section{CHANGES IN VERSION 1.6.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit finite mixture models using family
      function \code{mixture}.
      \item Introduce method \code{pp_mixture} to compute
      posterior probabilities of mixture component 
      memberships thanks to a discussion with Stephen Martin.
      \item Implement different ways to sample new levels
      of grouping factors in \code{predict} and related 
      methods through argument \code{sample_new_levels}.
      Thanks to Tom Wallis and Jonah Gabry for a detailed 
      discussion about this feature.
      \item Add methods \code{loo_predict}, \code{loo_linpred},
      and \code{loo_predictive_interval} for computing
      LOO predictions thanks to Aki Vehtari and Jonah Gabry.
      \item Allow using \code{offset} in formulas
      of non-linear and auxiliary parameters.
      \item Allow sparse matrix multiplication in
      non-linear and distributional models.
      \item Allow using the \code{identity} link for
      all auxiliary parameters.
      \item Introduce argument \code{negative_rt} in
      \code{predict} and \code{posterior_predict} to 